<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Lila"
    tools:context=".RegistroActivity">

    <LinearLayout

        android:id="@+id/scroll_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <!-- Logo de la APP -->

        <!-- Nombre de la App -->
        <ImageView
            android:id="@+id/logo_registro"
            android:layout_width="196dp"
            android:layout_height="154dp"
            android:layout_gravity="center"
            android:contentDescription="@string/Texto_bienvenida_login"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <!-- Mensaje instructivo -->

        <!-- Nombres -->
        <TextView
            android:id="@+id/tx_nombre_app"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/alike_angular"
            android:paddingTop="8dp"
            android:text="@string/app_name"
            android:textColor="@color/Blanco"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/instruction_message"
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/Instrucciones_para_registro"
            android:fontFamily="@font/amatic_sc"
            android:importantForAccessibility="no"
            android:paddingTop="8dp"
            android:text="@string/Instrucciones_para_registro"
            android:textAlignment="center"
            android:textColor="@color/Blanco"
            android:textSize="24sp"

            android:textStyle="bold" />


        <EditText
            android:id="@+id/et_nombre_registro"
            style="@style/EditTextRounded"
            android:layout_width="340dp"
            android:layout_height="49dp"
            android:layout_marginTop="15dp"
            android:autofillHints="textPersonName"
            android:fontFamily="@font/alike_angular"
            android:hint="@string/Nombres_registro"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingVertical="10dp"
            android:textAlignment="center"
            android:textColor="@color/Negro"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_apellidos_registro"
            style="@style/EditTextRounded"
            android:layout_width="340dp"
            android:layout_height="49dp"
            android:layout_marginTop="15dp"
            android:autofillHints="textPersonName"
            android:fontFamily="@font/alike_angular"
            android:hint="@string/Apellidos_registro"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingVertical="10dp"
            android:textAlignment="center"
            android:textColor="@color/Negro"
            android:textSize="14sp" />

        <!-- Correo Electrónico -->

        <EditText
            android:id="@+id/et_correo_registro"
            style="@style/EditTextRounded"
            android:layout_width="340dp"
            android:layout_height="49dp"
            android:layout_marginTop="15dp"
            android:autofillHints="textEmailAddress"
            android:fontFamily="@font/alike_angular"
            android:hint="@string/Correo_registro"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingVertical="10dp"
            android:textAlignment="center"
            android:textColor="@color/Negro"
            android:textSize="14sp" />

        <!-- Teléfono -->
        <EditText
            android:id="@+id/et_telefono_registro"
            style="@style/EditTextRounded"
            android:layout_width="340dp"
            android:layout_height="49dp"
            android:layout_marginTop="15dp"
            android:autofillHints="phone"
            android:fontFamily="@font/alike_angular"
            android:hint="@string/Telefono_registro"
            android:inputType="phone"
            android:minHeight="48dp"
            android:paddingVertical="10dp"
            android:textAlignment="center"
            android:textColor="@color/Negro"
            android:textSize="14sp" />

        <!-- Contraseña -->
        <EditText
            android:id="@+id/et_contraseña_registro"
            style="@style/EditTextRounded"
            android:layout_width="340dp"
            android:layout_height="49dp"
            android:layout_marginTop="15dp"
            android:autofillHints="textPassword"
            android:fontFamily="@font/alike_angular"
            android:hint="@string/Contraseña_registro"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingVertical="10dp"
            android:textAlignment="center"
            android:textColor="@color/Negro"
            android:textSize="14sp" />

        <!-- Repetir Contraseña -->
        <EditText
            android:id="@+id/et_repetir_con_registro"
            style="@style/EditTextRounded"
            android:layout_width="340dp"
            android:layout_height="49dp"
            android:layout_marginTop="15dp"
            android:autofillHints="textPassword"
            android:fontFamily="@font/alike_angular"
            android:hint="@string/Repetir_contra_registro"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingVertical="10dp"
            android:textAlignment="center"
            android:textColor="@color/Negro"
            android:textSize="14sp" />

        <!-- Check Box de Términos y Condiciones -->
        <CheckBox
            android:id="@+id/cbx_terminos_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:buttonTint="@color/Morado"
            android:fontFamily="@font/alike_angular"
            android:paddingTop="1sp"
            android:text="@string/Terminos_condicioness"
            android:textColor="@color/Blanco"
            android:textStyle="bold" />

        <!-- Botón de registro -->
        <Button
            android:id="@+id/btn_registo"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alike_angular"
            android:backgroundTint="@color/Azul"
            app:strokeColor="@color/Morado"
            app:strokeWidth="2dp"
            android:paddingTop="8dp"
            android:text="@string/registro"
            android:textColor="@color/Blanco"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <!-- Redireccionamiento al inicio de sesión -->
        <Button
            android:id="@+id/volver_inicio"
            style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/alike_angular"
            android:paddingTop="16dp"
            android:text="@string/Volver_Inicio"
            android:textAlignment="center"
            android:textColor="@color/Verde"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


</ScrollView>