<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bt_comienzah"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Lila">

    <ImageView
        android:id="@+id/ivlogo_home"
        android:layout_width="416dp"
        android:layout_height="280dp"
        android:layout_marginBottom="452dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/tv_nombreApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tiro_devanagari_marathi"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/Blanco"
        android:textSize="35sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivlogo_home"
        app:layout_constraintVertical_bias="0.358" />

    <TextView
        android:id="@+id/tv_texto_introductorio"
        android:layout_width="327dp"
        android:layout_height="104dp"
        android:fontFamily="@font/amatic_sc"
        android:lineSpacingExtra="1sp"
        android:text="@string/Texto_introductorio"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/Blanco"
        android:textSize="26sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombreApp"
        app:layout_constraintVertical_bias="0.109" />

    <Button
        android:id="@+id/bt_registrate"
        style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alike"
        android:text="@string/registro"
        android:textAlignment="center"
        android:textColor="@color/Blanco"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84" />

    <Button
        android:id="@+id/btn_comienza"
        android:layout_width="370dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/Azul"
        android:fontFamily="@font/alike_angular"
        android:text="@string/comienza"
        android:textColor="@color/Blanco"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727"
        app:strokeColor="@color/Morado"
        app:strokeWidth="2dp" />


</androidx.constraintlayout.widget.ConstraintLayout>