<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bt_comienzah"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Lila">

    <!-- Solicitud de Correo electrónico -->

    <!-- Botón de envío de la solicitud -->


    <ImageView
        android:id="@+id/logo_recuperar_contraseña"
        android:layout_width="301dp"
        android:layout_height="263dp"
        android:layout_gravity="center"
        android:layout_marginStart="85dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="85dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/tv_recuperar_contrasena"
        android:layout_width="359dp"
        android:layout_height="51dp"
        android:fontFamily="@font/alike_angular"
        android:text="@string/Recuperar_contrasena"
        android:textAlignment="center"
        android:textColor="@color/Blanco"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_instrutivo_recuperar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952" />

    <TextView
        android:id="@+id/tv_instrutivo_recuperar"
        android:layout_width="369dp"
        android:layout_height="85dp"
        android:fontFamily="@font/amatic_sc"
        android:text="@string/Instruciones_recuperar_contraseña"
        android:textAlignment="center"
        android:textColor="@color/Blanco"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_correo_recuperar"
        style="@style/EditTextRounded"
        android:layout_width="340dp"
        android:layout_height="49dp"
        android:layout_marginBottom="256dp"
        android:autofillHints="textEmailAddress"
        android:fontFamily="@font/alike_angular"
        android:hint="@string/Correo_registro"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingVertical="10dp"
        android:textAlignment="center"
        android:textColor="@color/Negro"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_instrutivo_recuperar"
        app:layout_constraintVertical_bias="0.487" />

    <Button
        android:id="@+id/enviar_solicitud_recuperar"
        android:layout_width="370dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="185dp"
        android:backgroundTint="@color/Azul"
        app:strokeColor="@color/Morado"
        app:strokeWidth="2dp"
        android:fontFamily="@font/alike_angular"
        android:text="@string/Enviar_recuperación"
        android:textColor="@color/Blanco"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_correo_recuperar" />


</androidx.constraintlayout.widget.ConstraintLayout>