<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C64CD5">

    <Button
        android:id="@+id/btGoogleLogin"
        android:layout_width="324dp"
        android:layout_height="66dp"
        android:backgroundTint="@color/Blanco"
        android:fontFamily="@font/alike_angular"
        android:text="@string/Google"
        android:textAlignment="viewEnd"
        android:textColor="@color/Negro"
        android:textSize="24sp"
        app:cornerRadius="15dp"
        app:icon="@drawable/logo_google"
        app:iconSize="40sp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.828"
        app:strokeColor="@color/Gris"
        app:strokeWidth="3dp" />

    <EditText
        android:id="@+id/te_usuario"
        style="@style/EditTextRounded"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:ems="10"
        android:fontFamily="@font/alike_angular"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/Negro"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335" />

    <ImageView
        android:id="@+id/img_logo_usu_contraseña"
        android:layout_width="72dp"
        android:layout_height="205dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366"
        app:srcCompat="@drawable/icons" />

    <EditText
        android:id="@+id/te_contraseña"
        style="@style/EditTextRounded"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:ems="10"
        android:fontFamily="@font/alike_angular"
        android:inputType="textPassword"
        android:password="true"
        android:phoneNumber="false"
        android:textAlignment="center"
        android:textColor="@color/Negro"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454" />

    <Button
        android:id="@+id/tv_instrutivo_recuperar"
        style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
        android:layout_width="245dp"
        android:layout_height="54dp"
        android:fontFamily="@font/alike_angular"
        android:text="@string/Recuperar_contraseña"
        android:textAlignment="center"
        android:textColor="@color/Blanco"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ingresar"
        app:layout_constraintVertical_bias="0.158" />


    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="297dp"
        android:layout_height="45dp"
        android:fontFamily="@font/alike_angular"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/Blanco"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <TextView
        android:id="@+id/tv_mensaje_bienvenida"
        android:layout_width="340dp"
        android:layout_height="79dp"
        android:fontFamily="@font/amatic_sc"
        android:text="@string/Texto_bienvenida_login"
        android:textAlignment="center"
        android:textColor="@color/Blanco"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203" />

    <Button
        android:id="@+id/btn_ingresar"
        android:layout_width="309dp"
        android:layout_height="69dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/Azul"
        android:fontFamily="@font/alike_angular"
        android:text="@string/ingresar"
        android:textColor="@color/Blanco"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597"
        app:strokeColor="@color/Morado"
        app:strokeWidth="2dp" />

    <ImageView
        android:id="@+id/img_logo_login"
        android:layout_width="129dp"
        android:layout_height="132dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="63dp"
        app:layout_constraintBottom_toTopOf="@+id/img_logo_usu_contraseña"
        app:layout_constraintEnd_toStartOf="@+id/tv_mensaje_bienvenida"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ic_launcher_foreground" />


    <RelativeLayout
        android:layout_width="325dp"
        android:layout_height="53dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btGoogleLogin">

        <TextView
            android:id="@+id/tv_no_tienes_cuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/alegreya"
            android:text="@string/No_tienes_cuenta"
            android:textColor="#fff"
            android:textSize="22sp" />

        <Button
            android:id="@+id/tv_registrate"
            style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/tv_no_tienes_cuenta"
            android:fontFamily="@font/alike_angular"
            android:text="@string/registro"
            android:textColor="@color/Verde"
            android:textSize="22sp" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>